--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,6 +2,7 @@
   padding: 2rem 0;
   width: 100%;
   box-sizing: border-box;
+  margin-top: 3rem;
 }
 
 .search-form {
@@ -11,6 +12,7 @@
   gap: 1rem;
   padding: 0 1rem;
   box-sizing: border-box;
+  margin-top: 3rem;
 }
 
 .search-input {
@@ -53,11 +55,22 @@
   }
 }
 
-.movies-grid {
+/* .movies-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1.5rem;
-  padding: 1rem;
+  padding: 2rem 3rem;
   width: 100%;
   box-sizing: border-box;
+} */
+
+.movies-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  padding: 2rem 0rem;
+  width: 100%;
+
+  justify-content: center;
+
 }
