--- a/src/css/MovieCard.css
+++ b/src/css/MovieCard.css
@@ -4,9 +4,11 @@
   overflow: hidden;
   background-color: #1a1a1a;
   transition: transform 0.2s;
-  height: 100%;
+  height: 500px;
   display: flex;
   flex-direction: column;
+  width: 20rem;
+
 }
 
 .movie-card:hover {
@@ -17,6 +19,7 @@
   position: relative;
   aspect-ratio: 2/3;
   width: 100%;
+  height: 400px;
 }
 
 .movie-poster img {
@@ -42,6 +45,7 @@
   flex-direction: column;
   justify-content: flex-end;
   padding: 1rem;
+  height: 400px;
 }
 
 .movie-card:hover .movie-overlay {
@@ -89,12 +93,15 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  
 }
 
 .movie-info h3 {
   font-size: 1rem;
   margin: 0;
+  color: white;
 }
+
 
 .movie-info p {
   color: #999;
@@ -110,11 +117,25 @@
 @media (max-width: 768px) {
   .movie-card {
     font-size: 0.9rem;
+    width: 12rem;
+    height: 25rem;
   }
 
   .movie-info {
     padding: 0.75rem;
+    
   }
+  .movie-info h3{
+    font-size: 0.7rem;
+  }
+  .movie-info p {
+  
+  font-size: 0.7rem;
+}
+.movie-poster{
+  height: 20rem;
+}
+
 
   .favorite-btn {
     width: 32px;
