--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,16 +1,23 @@
 .navbar {
+  position: fixed;
+  top: 0px;
   background-color: #000000;
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  z-index: 1;
+  
 }
 
 .navbar-brand {
+  text-decoration: none;
   font-size: 1.5rem;
   font-weight: bold;
-  color: red;
+  color: rgb(252, 252, 252);
+
 }
 
 .navbar-links {
