--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -39,11 +39,12 @@ body {
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: red;
   text-decoration: inherit;
+   
 }
 a:hover {
-  color: #535bf2;
+  color: #ffffff;
 }
 
 h1 {
